--- a/SGT Transport/My Project/Resources.resx
+++ b/SGT Transport/My Project/Resources.resx
@@ -2749,4 +2749,7 @@
   <data name="nube12" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\nube12.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="disk7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\disk7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
